--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,12 +1,13 @@
 .leaflet-container{
   width: 50vw;
   height: 100vh;
-  max-height: 100%;
-  
+  max-height: 100%; 
 }
+
 .infobox{
   background-color: rgb(190, 205, 50);
   height: 100vh;
+  min-width: 30%;
 }
 .p1{
   font-family: "Lucida Console", "Courier New", monospace;
@@ -34,11 +35,15 @@
 .overall{
   display: flex;
   max-height: 100%;
+  max-width: 100%;
+  background-color: black;
 
 }
 .chat-box{
   background-color: rgb(174, 255, 179);
   text-align: center;
+  min-width: 20%;
+
   
   max-height: 100%;
   height: 100vh;
@@ -57,6 +62,7 @@
   overflow-y: auto;
   max-height:  65%;
   
+  
 }
 input[type=text]{
   width: 60%;
@@ -65,9 +71,7 @@ input[type=text]{
   color: green;
   background-color: rgb(251, 255, 190);
 }
-.map-chat{
-  display: flex;
-}
+
 .msj-text{
   margin-left: 10%;
   margin-bottom: 10%;
